src/objects/MetrostudyProvisionSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Metrostudy Account provisioning settings</description>
    <fields>
        <fullName>ApplyRemovalAmendmentsLastRun__c</fullName>
        <label>Apply Removal Amendments Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DeleteAmmendmentLastCheck__c</fullName>
        <label>Delete Ammendment Last Check(not in use)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LogRemovalAmendmentsLastRun__c</fullName>
        <description>Tracks the last time this apex class was ran: MetroclientLogRemovalAmendments</description>
        <inlineHelpText>Tracks the last time this apex class was ran: MetroclientLogRemovalAmendments</inlineHelpText>
        <label>Log Removal Amendments Last Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LogRemovalAmendmentsMaxRun__c</fullName>
        <description>When needed, enter a max date/time for the apex class to use as a max date (MetroclientLogRemovalAmendments).  This field will usually be left blank.</description>
        <inlineHelpText>When needed, enter a max date/time for the apex class to use as a max date (MetroclientLogRemovalAmendments).  This field will usually be left blank.</inlineHelpText>
        <label>Log Removal Amendments Max Run</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SendEmailCc__c</fullName>
        <label>Send Email Cc</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SendEmailTo__c</fullName>
        <label>Send Email To</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SubscriptionUpdateLastCheck__c</fullName>
        <description>Last time the APEX class ran to batch update Account Provisioning</description>
        <inlineHelpText>Last time the APEX class ran to batch update Account Provisioning</inlineHelpText>
        <label>Subscription Update Last Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SubscriptionUpdateMaxCheck__c</fullName>
        <description>The max date and time the APEX class with look at for changes.  If blank, the class will include up 25 hours in the date/time range.</description>
        <inlineHelpText>The max date and time the APEX class with look at for changes.  If blank, the class will include up 25 hours in the date/time range.</inlineHelpText>
        <label>Subscription Update Max Check</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateProvisioning__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UpdateProvisioning</label>
        <type>Checkbox</type>
    </fields>
    <label>Metrostudy Provisioning Settings</label>
</CustomObject>